# stock-daily-v1

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONFIG_FILES.md  CONTRIBUTING.md  DATA_SOURCE_CONFIRMATION.md  DEPLOY.md  Dockerfile  QUICKSTART_CONFIG.md  README.md  STOCK_SELECTION_GUIDE.md  analyzer.py  config.py  convert_to_traditional.py  daily_stock_analysis使用指南.md  demo_stock_selection.py  docker-compose.yml  email_receivers.txt  enums.py  feishu_doc.py  main.py  market_analyzer.py  network_diagnose.py  notification.py  pyproject.toml  requirements.txt  reset_admin_password.py  run.sh  scheduler.py  search_service.py  server.py  stock_analyzer.py  stock_name_service.py  stock_selector.py  stocks.txt  storage.py  test-web.sh  (+5 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.obsidian/: community-plugins.json
AI-team/: start.md
api/: app.py  deps.py
bot/: __init__.py  dispatcher.py  handler.py  models.py
core/: analyzer.py  market_analyzer.py  search_service.py  stock_analyzer.py  storage.py
data_provider/: __init__.py  akshare_fetcher.py  baostock_fetcher.py  base.py  data_cache_manager.py  efinance_fetcher.py  finmind_fetcher.py  longbridge_fetcher.py  start_date.py  tushare_fetcher.py  yfinance_fetcher.py
docker/: docker-compose.yml
docs/: CHANGELOG.md  FAQ.md  FAQ_EN.md  README_CHT.md  README_EN.md  REPO_MAINTENANCE.md  bot-command.md  code-link.md  codelink.md  config_guide.md  full-guide.md  full-guide_EN.md  historical-screening.md
screeners/: SectorShift.py  Selector.py  stock_screener.py  (+1 more)
(+208 files in other folders)
