[project]
name = "daily-stock-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.12.0",
    "baostock>=0.8.0",
    "fake-useragent>=1.4.0",
    "fastapi>=0.100.0",
    "google-generativeai>=0.8.0",
    "google-search-results>=2.4.0",
    "jinja2>=3.1.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.3.0",
    "tenacity>=8.2.0",
    "tushare>=1.4.0",
    "uvicorn>=0.20.0",
    "yfinance>=0.2.0",
]
[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
